--- a/_molecules.scss
+++ b/_molecules.scss
@@ -5,7 +5,7 @@
 header {
     background-color: variables.$header-color;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: space-between;
     height: auto;
@@ -33,7 +33,6 @@ header {
 footer {
     margin-top: 2em;
     height: auto;
-    text-align: center;
     display: grid;
     grid-auto-flow: column;
     grid-column: 1 / -1;
