--- a/style.scss
+++ b/style.scss
@@ -123,6 +123,8 @@ body {
 		display: grid;
 	}
 
+	margin: auto 0;
+
 
 	@include breakpoint(large) { 
 
@@ -163,19 +165,25 @@ body {
 		.wrapper {
 			grid-template-columns: 1fr;
 		}
-
+		footer {
+			grid-auto-flow: row;
+		}
 
 	}
 
 	 
 	@include breakpoint(small) {
 
-
+		@include media-query-header(90%);
 		animation: background-gradient 4s ease infinite;
 		background-image: linear-gradient(135deg, #50b1ac, variables.$heading-color);
 		background-size: 400% 400%;
 		height: 100%;
 		width: 100%;
+
+		footer {
+			grid-auto-flow: row;
+		}
 	}
 
 
